<resources>
    <string name="app_name">Teste Solutis</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="login">Login</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="logo_solutis">Logo Solutis</string>


    <string name="user_field_error">Invalid email or cpf</string>
    <string name="password_field_error">Invalid password</string>
    <string name="cpf_cnpj">CPF/CNPJ</string>
    <string name="saldo">Saldo</string>
    <string name="logout_button_description">Logout button</string>
    <string name="pagamento">Pagamento</string>
    <string name="recebimento">Recebimento</string>
    <string name="error_date">Error parsing date</string>
    <string name="atencao">Atenção</string>
    <string name="deseja_mesmo_sair">"Você tem certeza que deseja sair? "</string>
    <string name="cancelar">Cancelar</string>
    <string name="sair">Sair</string>


</resources>